# hemisphere

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  justfile  logs.txt  rust-toolchain.toml  rustc-ice-2025-08-18T15_14_22-543226.txt  rustc-ice-2025-10-17T19_41_51-221009.txt  rustc-ice-2025-10-17T19_41_53-221070.txt  rustfmt.toml
.github/workflows/: nightly.yaml
app/: Cargo.toml
app-modules/: Cargo.toml
app-modules/src/: audio.rs  debug.rs  disk.rs  lib.rs
app/src/: audio_wip.rs  cli.rs  control.rs  debug.rs  disasm.rs  efb.rs  main.rs  registers.rs  renderer_info.rs  runner.rs  subsystem.rs  variables.rs  windows.rs  xfb.rs
app/src/runner/: timer.rs
app/src/subsystem/: cp.rs  pi.rs
cli/: Cargo.toml
cli/src/: app.rs  gdb.rs  main.rs  tab.rs
clif-incremental/: Cargo.toml
clif-incremental/src/: lib.rs
common/: Cargo.toml
common/src/: arch.rs  bin.rs  lib.rs  primitive.rs  util.rs
cores/: Cargo.toml
cores/src/: cpu.rs  dsp.rs  input.rs  lib.rs
cores/src/cpu/: jit.rs
cores/src/cpu/jit/: table.rs
cores/src/dsp/: interpreter.rs
crates/app/: Cargo.toml
crates/color/: Cargo.toml
crates/cores/: Cargo.toml
crates/cores/src/: dsp.rs  lib.rs
crates/cores/src/cpu/: jit.rs
crates/cores/src/cpu/jit/: mapping.rs
crates/cores/src/dsp/: interpreter.rs
crates/cubetool/: Cargo.toml
crates/cubetool/src/: inspect.rs  main.rs  vfs.rs
crates/disks/: Cargo.toml
crates/dspint/: Cargo.toml  build.rs
crates/dspint/src/: exec.rs  ins.rs  lib.rs
crates/dspint/src/ins/: opcodes.rs
crates/dspint/zayd-tests/: file.rs  main.rs
crates/gcwfmt/: Cargo.toml
crates/gekko/: Cargo.toml
crates/gekko/src/: lib.rs
crates/gxtex/: Cargo.toml
crates/gxtex/benches/: benchmarks.rs
crates/gxtex/src/: lib.rs
crates/hemisphere/: build.rs
crates/ipl-hle/: Cargo.toml  (+1 more)
crates/lazuli/: Cargo.toml
crates/lazuli/memtest/: main.rs
crates/lazuli/src/: cores.rs  lib.rs  panic.rs  stream.rs  system.rs
crates/lazuli/src/modules/: debug.rs  render.rs  vertex.rs
crates/lazuli/src/system/: ai.rs  bus.rs  di.rs  dspi.rs  eabi.rs  executable.rs  exi.rs  gx.rs  ipl.rs  mem.rs  os.rs  pi.rs  scheduler.rs  si.rs  vi.rs
crates/lazuli/src/system/bus/: mmio.rs
crates/lazuli/src/system/gx/: cmd.rs  pix.rs  tev.rs  tex.rs  xform.rs
crates/lazuli/src/system/gx/cmd/: attributes.rs
crates/ppcjit/: Cargo.toml
crates/ppcjit/src/: block.rs  builder.rs  cache.rs  hooks.rs  lib.rs  module.rs  sequence.rs  unwind.rs
crates/ppcjit/src/builder/: arithmetic.rs  branch.rs  compare.rs  exception.rs  floating.rs  logic.rs  memory.rs  others.rs  util.rs
crates/vtxjit/: Cargo.toml
crates/vtxjit/src/: builder.rs  lib.rs  parser.rs
crates/vtxjit/src/builder/: attr.rs
cubefile/: Cargo.toml
cubetool/: Cargo.toml
dol/: Cargo.toml
dolfile/: Cargo.toml
dolinfo/: Cargo.toml
dolinfo/src/: main.rs
dsp/: Cargo.toml  justfile
dsp/src/: exec.rs  ins.rs  lib.rs  mmio.rs
dsp/zayd-tests/: file.rs  main.rs
dspint/: Cargo.toml  build.rs  justfile
dspint/src/: exec.rs  ins.rs  lib.rs  mmio.rs
dspint/src/ins/: opcodes.rs
dspint/zayd-tests/: main.rs
fake-ipl/: Cargo.toml  build.rs  justfile  linker.ld  powerpc-nintendo-gamecube-eabi.json  powerpc-unknown-eabi.json
gekko/: Cargo.toml
gui/: Cargo.toml
gui/src/: emulator.rs  main.rs  tab.rs
gui/src/tab/: blocks.rs  control.rs  cpu.rs  logs.rs
gxtex/: Cargo.toml
gxtex/benches/: benchmarks.rs
gxtex/src/: lib.rs
hemicore/: Cargo.toml
hemisphere/: Cargo.toml  build.rs
hemisphere/memtest/: main.rs
hemisphere/src/: bus.rs  cores.rs  dsp.rs  jit.rs  lib.rs  mem.rs  mmu.rs  modules.rs  panic.rs  primitive.rs  render.rs  runner.rs  stream.rs  system.rs  video.rs
hemisphere/src/modules/: audio.rs  debug.rs  disk.rs  input.rs  render.rs  vertex.rs
hemisphere/src/modules/vertex/: interpreter.rs
hemisphere/src/modules/vertex/interpreter/: attributes.rs
hemisphere/src/runner/: worker.rs
hemisphere/src/system/: ai.rs  audio.rs  bus.rs  di.rs  disk.rs  dsp.rs  dspi.rs  eabi.rs  executable.rs  exi.rs  external.rs  gpu.rs  gx.rs  ipl.rs  lazy.rs  mem.rs  mmu.rs  pi.rs  processor.rs  scheduler.rs  serial.rs  si.rs  vi.rs  video.rs
hemisphere/src/system/bus/: mmio.rs
hemisphere/src/system/gpu/: colors.rs  command.rs  environment.rs  pixel.rs  texture.rs  transform.rs
hemisphere/src/system/gpu/command/: attributes.rs  vat.rs
hemisphere/src/system/gx/: cmd.rs  colors.rs  command.rs  cp.rs  environment.rs  pe.rs  pix.rs  tev.rs  tex.rs  texture.rs  transform.rs  xf.rs
hemisphere/src/system/gx/cmd/: attributes.rs
hemisphere/src/system/gx/command/: attributes.rs
hemisphere/src/system/gx/cp/: attributes.rs
hemisphere/src/system/mem/: alloc.rs
hemisphere/src/system/video/: regs.rs
hemisphere/src/video/: regs.rs
ipl-hle/: Cargo.toml  justfile  linker.ld
iso/: Cargo.toml
jitalloc/: Cargo.toml
licenses/: MIT.txt
modules/: Cargo.toml
ppcjit/: Cargo.toml
ppcjit/src/: allocator.rs  arena.rs  block.rs  builder.rs  cache.rs  hooks.rs  lib.rs  module.rs  registers.rs  sequence.rs  unwind.rs
ppcjit/src/block/: unwind.rs
ppcjit/src/builder/: arithmetic.rs  branch.rs  compare.rs  exception.rs  floating.rs  logic.rs  memory.rs  others.rs  registers.rs  util.rs
renderer/: Cargo.toml  build.rs
renderer/shaders/: attr.wesl  blit.wesl  blit_depth.wesl  blit_vec4f.wesl  color_blit.wesl  depth_blit.wesl  depth_resolve.wesl  tev.wesl  texgen.wesl  uber.wesl  xfb_blit.wesl
renderer/shaders/tev/: input.wesl
renderer/shaders/tev/input/: color.wesl
renderer/src/: blit.rs  lib.rs  render.rs
renderer/src/render/: buffers.rs  data.rs  framebuffer.rs  pipeline.rs  textures.rs  viewport.rs
renderer/src/render/pipeline/: compiler.rs  settings.rs  shader.rs
renderer/src/render/pipeline/compiler/: texenv.rs  texgen.rs
renderer/src/render/pipeline/shader/: texenv.rs  texgen.rs
renderer/src/util/: blit.rs
resources/: README.md
util/cubetool/: Cargo.toml
util/cubetool/src/: vfs.rs
vtxjit/: Cargo.toml
vtxjit/src/: builder.rs  lib.rs  parser.rs
vtxjit/src/builder/: attr.rs
(+117 files in other folders)
