[workspace]
resolver = "3"
members = ["common", "ppcjit", "dol", "dolinfo", "hemisphere", "app"]
default-members = ["common", "ppcjit", "dol", "hemisphere", "app"]

[profile.dev.package."iced-x86"]
opt-level = 0

[profile.dev.package."cranelift-codegen"]
opt-level = 2

[profile.dev.package."binrw"]
opt-level = 2

[profile.dev.package."dol"]
opt-level = 2

[profile.dev]
panic = "unwind"
codegen-units = 384

[profile.release]
panic = "abort"

[workspace.dependencies]
binrw = { version = "0.15", features = ["std"], default-features = false }
bitos = { git = "https://github.com/vxpm/bitos.git", features = ["zerocopy"] }
bytesize = "2"
clap = { version = "4.5", features = ["derive"] }
easyerr = "0.1"
glam = "0.30"
iced-x86 = { version = "1.21", features = [
    "decoder",
    "nasm",
    "std",
], default-features = false }
memmap2 = "0.9"
powerpc = "0.4"
rustc-hash = "2"
slotmap = "1.0"
strum = { version = "0.27", features = ["derive"] }
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wgpu = { version = "25.0", features = [
    "dx12",
    "gles",
    "metal",
    "vulkan",
    "wgsl",
], default-features = false }
zerocopy = { version = "0.8", features = ["derive"] }
