[workspace]
resolver = "3"
members = [
    # libraries
    "util",
    "gekko",
    "dol",
    "iso",
    "gxtex",
    "jitalloc",
    "hemisphere",
    "ppcjit",
    "dspint",
    "vtxjit",
    "cores",
    "renderer",
    "app-modules",

    # binaries
    "ipl-hle",
    "cubetool",
    "app",
]
default-members = [
    # libraries
    "util",
    "gekko",
    "dol",
    "iso",
    "gxtex",
    "jitalloc",
    "hemisphere",
    "ppcjit",
    "dspint",
    "vtxjit",
    "cores",
    "renderer",
    "app-modules",

    # binaries
    "app",
]

[profile.dev]
panic = "unwind"
codegen-units = 384

[profile.release]
opt-level = 3
debug = "line-tables-only"
strip = "none"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "unwind"
incremental = false
codegen-units = 1
rpath = false

[profile.dev.package."x11rb-protocol"]
opt-level = 0

[profile.dev.package."wayland-protocols"]
opt-level = 0

[profile.dev.package."wgsl-types"]
opt-level = 2

[profile.dev.package."wgsl-parse"]
opt-level = 2

[profile.dev.package."wesl"]
opt-level = 2

[profile.dev.package."cranelift-codegen"]
opt-level = 2

[profile.dev.package."binrw"]
opt-level = 2

[profile.dev.package."wgpu"]
opt-level = 2

[profile.dev.package."wgpu-core"]
opt-level = 2

[profile.dev.package."zerocopy"]
opt-level = 2

[profile.dev.package."glam"]
opt-level = 2

# workspace crates
[profile.dev.package."dol"]
opt-level = 2

[profile.dev.package."iso"]
opt-level = 2

[profile.dev.package."util"]
opt-level = 3

[profile.dev.package."gxtex"]
opt-level = 3

[profile.dev.package."gekko"]
opt-level = 2

[profile.dev.package."ppcjit"]
opt-level = 2

[profile.dev.package."dspint"]
opt-level = 2

[profile.dev.package."cores"]
opt-level = 2

[profile.dev.package."app-modules"]
opt-level = 2

[profile.dev.package."hemisphere"]
opt-level = 2

[profile.dev.package."renderer"]
opt-level = 2

# patch wgpu to fix dual source blending
[patch.crates-io]
wgpu = { git = "https://github.com/vxpm/wgpu", branch = "v27" }

[workspace.dependencies]
# workspace crates
util = { path = "./util" }
gekko = { path = "./gekko" }
dol = { path = "./dol" }
iso = { path = "./iso" }
gxtex = { path = "./gxtex" }
jitalloc = { path = "./jitalloc" }
hemisphere = { path = "./hemisphere" }
ppcjit = { path = "./ppcjit" }
dspint = { path = "./dspint" }
vtxjit = { path = "./vtxjit" }
cores = { path = "./cores" }
renderer = { path = "./renderer" }
app-modules = { path = "./app-modules" }

# actual dependencies
binrw = { version = "0.15", features = ["std"], default-features = false }
bitos = { git = "https://github.com/vxpm/bitos.git", features = ["zerocopy"] }
bitut = { git = "https://github.com/vxpm/bitut.git" }
bitvec = "1.0"
bytesize = "2"
clap = { version = "4.5", features = ["derive"] }
cranelift = { version = "0.127", features = ["frontend", "native"] }
easyerr = "0.1"
eyre-pretty = { git = "https://github.com/vxpm/eyre-pretty.git" }
glam = { version = "0.30", features = ["zerocopy"] }
indexmap = "2"
nanorand = { version = "0.8", features = ["tls"], default-features = false }
oneshot = { version = "0.1", default-features = false, features = ["std"] }
ordered-float = "5"
powerpc = "0.4"
ring-arena = { git = "https://github.com/vxpm/ring-arena.git" }
rustc-hash = "2"
seq-macro = "0.3"
static_assertions = "1.1"
strum = { version = "0.27", features = ["derive"] }
tinyvec = { version = "1.10", features = ["alloc"] }
tracing = { version = "0.1", default-features = false, features = [
    "std",
    "release_max_level_info",
] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "ansi",
    "env-filter",
] }
twox-hash = { version = "2.1", default-features = false, features = [
    "xxhash3_64",
] }
wesl = { version = "0.3", default-features = false, features = ["eval"] }
wesl-quote = { version = "0.3" }
wgpu = { version = "27.0", features = [], default-features = false }
zerocopy = { version = "0.8", features = ["derive"] }
windows = { version = ">=0.59", features = [
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
] }
rustix = { version = "1.1", features = ["mm"] }

# lints
[workspace.lints.clippy]
new_without_default = "allow"

assigning_clones = "warn"
bool_to_int_with_if = "warn"
borrow_as_ptr = "warn"
case_sensitive_file_extension_comparisons = "warn"
cast_ptr_alignment = "warn"
checked_conversions = "warn"
cloned_instead_of_copied = "warn"
copy_iterator = "warn"
default_union_representation = "warn"
deref_by_slicing = "warn"
doc_link_with_quotes = "warn"
empty_drop = "warn"
empty_structs_with_brackets = "warn"
equatable_if_let = "warn"
expl_impl_clone_on_copy = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
float_cmp = "warn"
float_cmp_const = "warn"
fn_params_excessive_bools = "warn"
format_push_string = "warn"
if_then_some_else_none = "warn"
ignored_unit_patterns = "warn"
implicit_clone = "warn"
inefficient_to_string = "warn"
invalid_upcast_comparisons = "warn"
iter_filter_is_ok = "warn"
iter_filter_is_some = "warn"
large_digit_groups = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
len_without_is_empty = "allow"
linkedlist = "warn"
literal_string_with_formatting_args = "allow"
lossy_float_literal = "warn"
macro_use_imports = "warn"
manual_assert = "warn"
manual_instant_elapsed = "warn"
manual_is_variant_and = "warn"
manual_let_else = "warn"
manual_ok_or = "warn"
manual_string_new = "warn"
map_unwrap_or = "warn"
match_bool = "warn"
mismatching_type_param_order = "warn"
mut_mut = "warn"
mutex_atomic = "warn"
needless_bitwise_bool = "warn"
needless_borrow = "warn"
needless_continue = "warn"
needless_for_each = "warn"
needless_raw_string_hashes = "warn"
needless_raw_strings = "warn"
negative_feature_names = "warn"
no_mangle_with_rust_abi = "warn"
non_send_fields_in_send_ty = "warn"
option_option = "warn"
ptr_cast_constness = "warn"
range_minus_one = "warn"
rc_mutex = "warn"
redundant_else = "warn"
redundant_feature_names = "warn"
ref_option_ref = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_functions_in_if_condition = "warn"
string_add = "warn"
string_add_assign = "warn"
string_lit_chars_any = "warn"
transmute_ptr_to_ptr = "warn"
trivially_copy_pass_by_ref = "warn"
unnecessary_box_returns = "warn"
unnecessary_join = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unnecessary_self_imports = "warn"
unnecessary_wraps = "warn"
unneeded_field_pattern = "warn"
unnested_or_patterns = "warn"
unreadable_literal = "warn"
unsafe_derive_deserialize = "warn"
unused_async = "warn"
unused_result_ok = "warn"
verbose_file_reads = "warn"
zero_sized_map_values = "warn"
