[package]
name = "app-modules"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
hemisphere.workspace = true
tracing.workspace = true
zerocopy.workspace = true

gilrs = "0.11"
cpal = "0.16"
resampler = "0.4"
hound = "3.5"
addr2line = { version = "0.25", features = [
    "cpp_demangle",
    "loader",
], default-features = false }
mapfile_parser = "2.12"
cwdemangle = "1"
