[package]
name = "app"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
hemisphere = { path = "../hemisphere" }
renderer = { path = "../renderer" }
eyre-pretty.workspace = true
clap.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
wgpu.workspace = true

eframe = { version = "0.33", features = [
    # platforms
    "wayland",
    "x11",

    # renderer backend
    "wgpu",

    # eframe features
    "persistence",
    "default_fonts",
], default-features = false }
egui_extras = "0.33"
tracing-appender = "0.2"
