[package]
name = "common"
description = "Crate with common definitions"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
bitos.workspace = true
bytesize.workspace = true
easyerr.workspace = true
powerpc.workspace = true
tracing.workspace = true
zerocopy.workspace = true
strum.workspace = true
