[package]
name = "cores"
description = "Cores for the emulator"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
hemisphere.workspace = true
ppcjit.workspace = true
dspint.workspace = true
util.workspace = true
seq-macro.workspace = true
rustc-hash.workspace = true
tracing.workspace = true
indexmap.workspace = true
