[package]
name = "dolinfo"
version = "0.1.0"
edition = "2024"

[dependencies]
dolfile = { path = "../dolfile" }
eyre-pretty = { path = "/home/vxpm/dev/eyre-pretty" }
bytesize.workspace = true
clap = { version = "4.5", features = ["derive"] }
comfy-table = { version = "7.1", default-features = false }
