[package]
name = "dolinfo"
description = "A small utility to print information about a .dol executable"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
dol = { path = "../dol" }
bytesize.workspace = true
clap.workspace = true
eyre-pretty.workspace = true
comfy-table = { version = "7.1", default-features = false }
