[package]
name = "dsp"
description = "DSP interpreter"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[[test]]
name = "zayd-tests"
path = "zayd-tests/main.rs"
harness = false

[dev-dependencies]
binrw.workspace = true
libtest-mimic = "0.8"

[dependencies]
common = { path = "../common" }
bitos.workspace = true
bytesize.workspace = true
tracing.workspace = true
zerocopy.workspace = true
strum.workspace = true
tinyvec = "1.10"
