[package]
name = "dspint"
description = "DSP interpreter"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[[test]]
name = "zayd-tests"
path = "zayd-tests/main.rs"
harness = false
required-features = ["zayd-tests"]

[features]
zayd-tests = []

[build-dependencies]
strum.workspace = true

[dev-dependencies]
binrw.workspace = true
libtest-mimic = "0.8"

[dependencies]
util.workspace = true
hemisphere.workspace = true

bitos.workspace = true
tracing.workspace = true
zerocopy.workspace = true
strum.workspace = true

tinyvec = "1.10"
