[package]
name = "gui"
version = "0.1.0"
edition = "2024"

[dependencies]
hemisphere = { path = "../hemisphere" }
slotmap.workspace = true
wgpu.workspace = true
bytesize.workspace = true

egui_dock = "0.17"
egui_flex = "0.4.0"
eframe = { version = "0.32", default-features = false, features = [
    # "wayland",
    "x11",
    "wgpu",
    "default_fonts",
    "persistence",
] }
