[package]
name = "gui"
version = "0.1.0"
edition = "2024"

[dependencies]
hemisphere = { path = "../hemisphere" }
bytesize.workspace = true
slotmap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender = "0.2"
wgpu.workspace = true

egui_dock = "0.17"
egui_flex = "0.4.0"
egui_extras = "0.32"
eframe = { version = "0.32", default-features = false, features = [
    # "wayland",
    "x11",
    "wgpu",
    "default_fonts",
    "persistence",
] }
