[package]
name = "hemisphere"
description = "The hemisphere emulator"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
gekko.workspace = true
util.workspace = true
dol.workspace = true
iso.workspace = true
gxtex.workspace = true

bitos.workspace = true
bytesize.workspace = true
easyerr.workspace = true
tracing.workspace = true
zerocopy.workspace = true
strum.workspace = true
glam.workspace = true
rustc-hash.workspace = true
ordered-float.workspace = true
seq-macro.workspace = true
oneshot.workspace = true
tinyvec.workspace = true
ring-arena.workspace = true

color-backtrace = "0.7"
