[package]
name = "hemisphere"
description = "The hemisphere emulator"
version = "0.1.0"
edition = "2024"

[[test]]
name = "memtest"
path = "memtest/main.rs"
harness = false

[lints]
workspace = true

[dependencies]
gekko.workspace = true
util.workspace = true
dol.workspace = true
iso.workspace = true
gxtex.workspace = true

bitos.workspace = true
bitvec.workspace = true
bytesize.workspace = true
easyerr.workspace = true
glam.workspace = true
oneshot.workspace = true
ordered-float.workspace = true
ring-arena.workspace = true
seq-macro.workspace = true
strum.workspace = true
tracing.workspace = true
twox-hash.workspace = true
zerocopy.workspace = true

color-backtrace = "0.7"

[dev-dependencies]
indicatif = "0.18"
