[package]
name = "ppcjit"
description = "JIT for Gekko PowerPC code using cranelift"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
gekko.workspace = true
jitalloc.workspace = true

bitos.workspace = true
easyerr.workspace = true
rustc-hash.workspace = true
zerocopy.workspace = true
tracing.workspace = true
cranelift.workspace = true
cranelift-codegen.workspace = true
twox-hash.workspace = true
strum.workspace = true
serde.workspace = true
fjall = { version = "3", default-features = false }
ciborium = "0.2"
zstd = { version = "0.13", features = ["arrays", "legacy"], default-features = false }
