[package]
name = "vtxjit"
description = "JIT vertex parser using Cranelift"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
jitalloc.workspace = true
bitos.workspace = true
rustc-hash.workspace = true
zerocopy.workspace = true
tracing.workspace = true
cranelift.workspace = true

[target.'cfg(windows)'.dependencies]
windows.workspace = true

[target.'cfg(unix)'.dependencies]
nix.workspace = true
