[package]
name = "cores"
description = "Cores for the emulator"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[lints]
workspace = true

[dependencies]
lazuli.workspace = true
ppcjit.workspace = true
dspint.workspace = true
util.workspace = true
tracing.workspace = true
indexmap.workspace = true
