[package]
name = "gekko"
description = "PowerPC Gekko arch crate"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[lints]
workspace = true

[dependencies]
util.workspace = true
bitos.workspace = true
bytesize.workspace = true
powerpc.workspace = true
tracing.workspace = true
zerocopy.workspace = true
strum.workspace = true
