[package]
name = "gxtex"
description = "Encoding and decoding of GX texture formats"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lints]
workspace = true

[dev-dependencies]
criterion = "0.7.0"
image = { version = "0.25", default-features = false, features = [
    "png",
    "webp",
] }

[[bench]]
name = "benchmarks"
harness = false

[dependencies]
bitut.workspace = true
zerocopy.workspace = true
seq-macro.workspace = true

multiversion = "0.8"
