[package]
name = "vtxjit"
description = "JIT vertex parser using Cranelift"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
util.workspace = true
jitalloc.workspace = true
hemisphere.workspace = true

rustc-hash.workspace = true
zerocopy.workspace = true
cranelift.workspace = true
seq-macro.workspace = true
