[package]
name = "cubetool"
description = "A CLI tool for GameCube stuff"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
dol.workspace = true
iso.workspace = true
bytesize.workspace = true
clap.workspace = true
eyre-pretty.workspace = true
binrw.workspace = true
powerpc.workspace = true

comfy-table = { version = "7.1", default-features = false }
petgraph = "0.8"
